@@ -2,6 +2,7 @@
 
 # Uncomment below to force Rails into production mode when 
 # you don't control web/app server and can't set it the proper way
+# CC.rb: this line should stay commented out
 # ENV['RAILS_ENV'] ||= 'production'
 
 # Specifies gem version of Rails to use when vendor/rails is not present
@@ -58,4 +59,3 @@ require 'cruise_control/version'
 
 # custom MIME type for CCTray application
 Mime::Type.register "application/cctray", :cctray
-
